Finalizado a implementacao do trabalho azul

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <div>HELLO WORLD!</div>
+        
+        
+        <label>TRABALHO AZUL!!!</label>
     </body>
 </html>
