Trabalho B azul finalizado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div>HELLO WORLD!</div>
         
         
-        <label>TRABALHO AZUL!!!</label>
+        <label>TRABALHO AZUL A!!!</label>
+        <label>TRABALHO AZUL B!!!</label>
     </body>
 </html>
