adicionado terceira implementacao

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         
         <label>TRABALHO AZUL A!!!</label>
         <label>TRABALHO AZUL B!!!</label>
+        <label>TRABALHO AZUL C!!!</label>
     </body>
 </html>
