--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <label>TRABALHO AZUL A!!!</label>
         <label>TRABALHO AZUL B!!!</label>
         <label>TRABALHO AZUL C!!!</label>
+
+        <label>Trabalho preto !!</label>
+        
     </body>
 </html>
