consolidado da aula

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
         <label>Trabalho preto !!</label>
         
-        
+        git clone <repositorio></repositorio> - baixa o repositorio
+        git status - verifica as mudancas
+        git add <file></file> - adiciona as mudancas
+        git commit -m "mensagem" - salva as mudancas
+        git push origin master - empurra/compartilha o commit
+        git merge <branch></branch> - junta as modificacoes entre branchs
+        git checkout - pula de um branch para outro
+        git fetch origin - verifica se existem alteracoes
+        git pull origin master - baixa as mudancas
+        git diff <file> - verifica as diferencas no arquivo selecio
     </body>
 </html>
